Bug 152172 - macOS: under macOS Ventura 13.x with Safari as default browser and Settings > Advanced > Show Develop menu disabled, local help loaded instead of the expected online help
Summary: macOS: under macOS Ventura 13.x with Safari as default browser and Settings >...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: All macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks: macOS-UI-polish
  Show dependency treegraph
 
Reported: 2022-11-22 15:20 UTC by steve
Modified: 2025-04-23 10:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2022-11-22 15:20:44 UTC
Description:
This is a new problem under macOS Ventura.

Requirements:
- macOS Ventura
- Safari is default browser
- Settings > Advanced > Show Develop menu disabled

Reproduced on macOS 13.0.1, LO 7.4.2.3

Steps to Reproduce:
1. open LibreOffice
2. open Help (either from Start Center > Help button or menubar > Help > LibreOffice Help)

Actual Results:
Safari opens this address: file:///Users/username/Library/Application%20Support/LibreOffice/4/user/temp/lu354701zjm9f.tmp/NewHelp0.html
but the page is never loaded, just a blank white page.

Expected Results:
Local help should be loaded.


Reproducible: Always


User Profile Reset: No

Additional Info:
Once Settings > Advanced > Show Develop menu disabled is enabled, this issue is no longer reproducible
Comment 1 Christian Lohmaier 2022-11-22 15:27:04 UTC
reworded the summary, and shortened it - Developer mode bypasses the problems with safari and is in first description.

Problem is that LO's check whether Safari is default browser no longer works on Ventura (the function is deprecated and likely just reports null instead of proper application)

https://git.libreoffice.org/core/+/refs/heads/master/sfx2/source/appl/sfxhelp.cxx#1115  

Without developer mode enabled, Safari will only load files from LO's application directory when the action was directly triggered by the user, but not when it is just launched with a file by another process (the reason why the workaround was added).
Comment 2 steve 2022-11-22 15:31:35 UTC
Thanks for the modifications, cloph. Sorry I got this the other way round.
Comment 3 Christian Lohmaier 2022-11-23 14:07:46 UTC
Turns out the function still works, but the path returned for safari is now different due to the new "Rapid Security Responses" feature introduced with macOS 13
Patch at https://gerrit.libreoffice.org/c/core/+/143178
Comment 4 Commit Notification 2022-11-23 18:25:43 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e5d9db623882c7a9d88d40d5bf2bce0dbdb11365

tdf#152172 fix help workaround re Safari as default browser on Ventura

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-11-23 19:21:06 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/588c40b3a16008bfcfe6bb75e009faecaefccb7d

tdf#152172 fix help workaround re Safari as default browser on Ventura

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 steve 2022-11-24 13:26:16 UTC
Todays build, which should have yesterdays commit still opens a blank tab in safari. Not sure what the state of this bug is. There are two commits and two targets defined in Whiteboard. But maybe not yet fully fixed?

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8467aa93e2038b3030e1add94e0ca6cc4ad44032
CPU threads: 8; OS: Mac OS X 13.0.1; UI render: default; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 7 Christian Lohmaier 2022-11-28 16:43:25 UTC
you were completely right, wasn't fully fixed…
With https://gerrit.libreoffice.org/c/core/+/143410 it will be. Did update my machine to Ventura to double-check myself this time :-))
Comment 8 Commit Notification 2022-11-28 19:54:49 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c7b1fbff3673284d829606e5e07f9deb4258a5f5

f'up to the tdf#152172 fix re Safari as default browser on Ventura

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-11-29 10:46:27 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/9988d022fffc24b1112ae066f6847b86e297667b

f'up to the tdf#152172 fix re Safari as default browser on Ventura

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 steve 2022-11-29 14:09:24 UTC
Verified, LO startcenter > help button opens online help as expected with safari as default brwoser and show develop menu disabled.

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: fe845e40ab23a3fa9fd401498edf925b7b00776f
CPU threads: 8; OS: Mac OS X 13.0.1; UI render: default; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded

Thanks for tackling this, cloph.