tdf#152172 fix help workaround re Safari as default browser on Ventura

the "Rapid Security Response" feature added with macOS 13 (Ventura)
makes Safari a stub in a different location. Instead of the traditional
/Application/Safari.app/ the call to query the default app will return
/System/Volumes/Preboot/Cryptexes/App/System/Applications/Safari.app/
So instead of a full match, just check for the suffix.

Change-Id: Ic4abfe33c118827bc0e089e9966e57a0fd8c0526
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143178
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>